--- a/style.css
+++ b/style.css
@@ -34,9 +34,8 @@ body * {
 }
 
 #container {
-    width: 360px;
-    /* height: 712px; */
-    /* border: 1px solid red; */
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
 }
